refactor: 코드 품질 개선 및 보안 강화
백엔드:
- PaymentController import 누락 수정
- GlobalExceptionHandler 중복 코드 제거 및 공통 메서드 추출
- UseCase에서 SecurityContext 직접 접근을 Principal 파라미터로 변경
- CORS 환경 변수화
- 외부 API 호출을 트랜잭션 밖으로 분리

프론트엔드:
- 하드코딩된 민감 정보를 환경 변수로 변경
- 타입 안정성 개선 (any -> unknown, AxiosError 타입 체크)
- 에러 처리 유틸리티 생성 및 일관성 개선
- react-hook-form + zod를 사용한 폼 검증 추가
- useCallback 의존성 배열 수정
- authStore 중복 localStorage 접근 제거